# standard_library

./: CMakeLists.txt  README.md  local-build.cmd
src/asm/: equal.asm  factorial.asm
src/cpp/: main.cpp
